# ECLlib

./: .gitattributes  .gitignore  AGENTS.md  ECL.py  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  tester.ipynb
docs/: user-manual.md
examples/: unrst_tool.py
scripts/: benchmark_unrst_writes.py  develop.sh  unrst_tool.py
src/ECLlib/: File_checker.py  Files.py  GSG.py  __init__.py  config.py  constants.py  core.py  intersect.py  unformatted_base.py  utils.py
tests/: test_blockspec_unformatted.py  test_data_file_dim.py  test_ecl_input.py  test_egrid_file.py  test_input_regression_cases.py  test_num_indexed_vectors.py  test_unfmt_block_from_data.py  test_unrst_augment.py  test_unrst_tool_example.py  test_utils_imports.py
tests/Model_From_IXF_IX/: Flow_calculation.ixf  Model_From_IXF.EGRID  Model_From_IXF.INIT  Model_From_IXF.INSPEC  Model_From_IXF.MSG  Model_From_IXF.PRT  Model_From_IXF.PRTX  Model_From_IXF.REP  Model_From_IXF.RFT  Model_From_IXF.RSM  Model_From_IXF.RSSPEC  Model_From_IXF.RTELOG  Model_From_IXF.RTEMSG  Model_From_IXF.SMSPEC  Model_From_IXF.UNSMRY  Model_From_IXF.afi  Model_From_IXF.afo_xml  Model_From_IXF.dbprtx  Model_From_IXF.h5  equil.ixf  equil_TEMP.ixf  fluid.ixf  fluid_TEMP.ixf  grid.ixf  grid_TEMP.ixf  ix_header.ixf  ix_header_TEMP.ixf  region.ixf  region_TEMP.ixf  report.ixf  rock.ixf  well_fm.ixf  well_fm_TEMP.ixf  well_ix.ixf  well_ix_TEMP.ixf
tests/Model_From_IXF_OPM/: MODEL_FROM_IXF_OPM.DBG  MODEL_FROM_IXF_OPM.EGRID  MODEL_FROM_IXF_OPM.INIT  MODEL_FROM_IXF_OPM.PRT  MODEL_FROM_IXF_OPM.RSM  Model_From_IXF_OPM.DATA
(+45 files in other folders)
